2025-01-10  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/sftp.el: Refactor.
	(sftp-mode): New major mode.

	* early-init.el: Disable byte-compile of this file.
	Skip loading of site-start.el.
	Set `load-prefer-newer' to t.

	* site-lisp/consult-xref-apropos.el: Remove this rarely used
	package.

2025-01-09  Zhengyi Fu  <i@fuzy.me>

	* packages.el:
	* exde: Replace exwm-ns by ednc.

	* init.el: Update comments.
	Remove `with-editor' integration for `eat'.

	* site-lisp/pp-posframe.el: Change default binding for
	`pp-posframe-buffer' to `M-.'.

	* init.el: Remove hack for autoloading pixel-scroll.
	Set `scroll-conservatively' to 101.
	Do not disable poll for autorevert anymore.
	Refactor update font settings.

2025-01-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Autoload `consult-kill'.

	* site-lisp/consult-browser-hist.el (consult-browser-hist--format):
	Use `truncate-string-ellipsis' to truncate the title.

	* site-lisp/quick-window.el: Replace popon with posframe
	because of popon's bugs.

	* site-lisp/consult-xref-apropos.el:
	* site-lisp/consult-browser-hist.el: Use the default consult
	highlight function.

	* init.el: Set customized faces for emacs server.
	Ignore EGLOT buffers in consult-buffer.

	* site-lisp/consult-xref-apropos.el: Adapt to consult 1.10.

	* site-lisp/consult-browser-hist.el: Requires consult 1.10.
	Truncate the titles if too long.
	(consult-browser-hist-title-max-width): New user option.

	* site-lisp/exde.el: Put exwm-firefox-mode, exwm-xim-mode,
	exmw-systemtray mode and exiwm-ns-init into exwm-init-hook.

2025-01-07  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-browser-hist.el: Properly specify narrow keys.

	* init.el (consult-browser-hist): Fix autoload.

	* site-lisp/consult-browser-hist.el: Adapt to new consult api.

	Move consult interface for browser-hist to a separate file.
	* consult-browser-hist.el: New file.
	* init.el: Remove consult-browser-hist implemenation.

	* init.el: Add a consult-buffer-source for FireFox.